--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -15,7 +15,7 @@ let tags = getUniqueTags(posts);
 
 <Layout title={`Tags | ${SITE.title}`}>
   <Header activeNav="tags" />
-  <Main pageTitle="Tags" pageDesc="All the tags used in posts.">
+  <Main pageTitle="Tags" pageDesc="모든 태그 모음.">
     <ul>
       {tags.map(tag => <Tag name={tag} size="lg" />)}
     </ul>
