--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -67,6 +67,9 @@ const socialImageURL = new URL(
       content="a0BHeYMjjNQfJnI7ScEUyt2sXri75SZ1nPkIuxET1rA"
     />
 
+    <!-- Naver Verification -->
+    <meta name="naver-site-verification" content="b64612c7ceb8f45cc12059cda00a916e15610bec" />
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-0RCTCPYWR8"
     ></script>
